--- a/style.css
+++ b/style.css
@@ -4,13 +4,27 @@ body{
 }
 img.icon{
     width: 50px;
+    padding: 5px;
+    position: relative;
 }
 .content{
     background-color: rgb(255, 188, 87);
-    width: 300px;
+    width: 350px;
     padding: 40px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+}
+#chiwawa{
+    width: 120px;
+    padding: 5px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%,25%);
+}
+.imagesite{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,0);
 }
