--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ img.icon{
     background-color: rgb(255, 188, 87);
     width: 350px;
     padding: 40px;
+    border: 10px;
+    border-color: #FFFFFF;
+    border-style: solid;
     position: absolute;
     top: 50%;
     left: 50%;
